# interact2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  app.cpp  app.h  concavechopper.cpp  concavechopper.h  constants.h  editor.cpp  editor.h  ilevelmanager.h  leveldata.h  leveldatamodel.cpp  leveldatamodel.h  levelfileio.cpp  levelfileio.h  levelhandler.cpp  levelhandler.h  levelinteractor.cpp  levelinteractor.h  levelmodel.cpp  levelmodel.h  levelreader.cpp  levelreader.h  main.cpp  physicsobjectoptimizer.cpp  physicsobjectoptimizer.h
qml/: main.qml
qml/Application/Components/: Button.qml  Dialog.qml  ImageButton.qml  RoundButton.qml
qml/Application/Levels/: Level.qml
qml/Application/Notifications/: Notification.qml
qml/Application/PhysicsObjects/: PCircle.qml  PLine.qml  PObject.qml  PObjectFactory.qml  PPolygon.qml  PRectangle.qml  PStar.qml
qml/Application/Screens/: CurrentLevelScreen.qml  EditorScreen.qml  LevelSelectionScreen.qml  MainScreen.qml  Screens.qml  SettingsScreen.qml
qml/Application/Sound/: Sound.qml
qml/Application/Style/: Style.qml
resources/: qtquickcontrols2.conf  resources.qrc  resources_media.qrc
resources/levels/Introduction/: data.json
resources/levels/Level 1/: data.json
resources/levels/Level 2/: data.json
resources/levels/Level 3/: data.json
resources/levels/Level 4/: data.json
resources/levels/Level 5/: data.json
resources/levels/Level 6/: data.json
resources/shaders/: fragment.frag
resources/sounds/: LICENSE
